Fix the build error with latest automake.
Change-Id: Ie939988addaaa1c166f39602a80b45f003c730ea

--- a/configure.ac
+++ b/configure.ac
@@ -1,14 +1,16 @@
 AC_PREREQ(2.52)
 
 AC_INIT([avsystem], [1.0])
-AM_INIT_AUTOMAKE([-Wall -Werror foreign])
+AM_INIT_AUTOMAKE([-Wall foreign])
 AC_CONFIG_HEADERS([config.h:config.hin])
 
 AC_CONFIG_MACRO_DIR([m4])
 
 # Checks for programs.
+m4_ifdef([AM_PROG_AR], [AM_PROG_AR])
 AC_PROG_CC
 AC_C_CONST
+AM_PROG_CC_C_O
 dnl AC_FUNC_MALLOC
 AC_FUNC_MMAP
 AC_FUNC_REALLOC
