Enable initial audio hal in sound server which handles audio path set
Change-Id: I77817046da6834d27c00e2b8e3bafa212b8c5aaa

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,7 +10,9 @@ lib_LTLIBRARIES = libmmfsound.la
 
 includelibmmfsounddir = $(includedir)/mmf
 includelibmmfsound_HEADERS = include/mm_sound.h \
-							include/mm_sound_private.h
+							include/mm_sound_private.h \
+							server/include/mm_sound_plugin.h \
+							server/include/mm_sound_plugin_hal.h
 
 libmmfsound_la_SOURCES = mm_sound.c \
 			mm_sound_client.c 
