--- a/project.config
+++ b/project.config
@@ -3,9 +3,9 @@
 [access]
 	inheritFrom = scm/acls/domain_multimedia
 [project]
-	state = active
 	description = "Domain: Multimedia;"\n\
 "Maintainers: Jonghyuk Choi,Vivian Zhang;"\n\
 "Integrators: Byungwook Jang;"\n\
-"Licenses: Apache-2.0;"\n\
-
+"Licenses: Apache-2.0;"
+[receive]
+	requireChangeId = false
