Let's start tizen audio 3.0
- Big Changes
Change IPC from msgq to dbus between client and sound-server
Adopt focus and Stream-based routing
Move device managing code to pulseaudio

- Others
Support container
Fix bugs
Some refactoring
Remove accessibility related code
Remove vconf code for product
change sound-server to system permission

- Commits
Bug Fix : Remove not matching endif
Remove audio-balance/muteall/mono-audio related code
Remove accessibility related code
Change smack execution label("none") for dump script
remove muteall check when volume set
Add MMSoundMgrPulseSetDefaultSink() to load proper sink for a2dp
Remove code accessing to call related vonfkey
Remove unused vconf code
Remove vconf-key related to product feature
Remove voicerecoder vconf-keys usage
Remove recoder vconf-keys usage on TV profile
Seperate code and build require for bluetooth operation
Fix clear_dead_cb_list invalid operation
Remove voice control vconf-key usage
Update device direction in bt sco callback
Remove device-volume
Fix bug, invalid parameter to pa_usec_to_bytes, play sound endcallback
[Keytone Plugin] Remove unused code
Add and modify tone/wav player related APIs for stream_info
Revise primary volume feature
Send error just with string on dbus (not use quark)
Fix bug, print device id,state correctly
Modify signal send/subscribe API(change dest/sender bus name to NULL)
Set volume to pulseaudio through dbus
Fix index bug regarding focus watch cb
Fix invalid header include
add libmmsoundcommon dependency in plugin tone makefile
Add libpulse, libmmfsound depndency in plugin Makefiles
Start id of focus watch callback from 1, modify FOCUS_HANDLE_MAX
Add signal API set(subscribe/unsubscribe/send)
modify focus apis param for container support
SIGSEGV fixed when call sound_manager_destroy_stream_information()
enable new focus watch callback
disable new focus watch callback
Revise focus watch callback, add focus API to get uniq id
Revert device-type to enum
Disable mgr_device,pulse,

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,14 +10,19 @@ includelibmmfsounddir = $(includedir)/mmf
 includelibmmfsound_HEADERS = include/mm_sound.h \
 							include/mm_sound_private.h \
 							include/mm_sound_pa_client.h \
-							include/mm_sound_pcm_async.h
+							include/mm_sound_pcm_async.h \
+							include/mm_sound_focus.h
 
 libmmfsound_la_SOURCES = mm_sound.c \
 			mm_sound_client.c \
+			mm_sound_client_dbus.c \
 			mm_sound_device.c \
 			mm_sound_pcm.c \
 			mm_sound_pa_client.c \
 			mm_sound_pcm_async.c
+if USE_FOCUS
+libmmfsound_la_SOURCES += mm_sound_focus.c
+endif
 
 libmmfsound_la_DEPENDENCIES = common/libmmfsoundcommon.la
 
@@ -26,6 +31,7 @@ libmmfsound_la_CFLAGS = -I$(srcdir)/include \
 			$(VCONF_CFLAGS) \
 			-I$(srcdir)/servertype/include \
 			$(GLIB2_CFLAGS) \
+			$(GIO_CFLAGS) \
 			$(MMSESSION_CFLAGS) \
 			$(AUDIOSESSIONMGR_CFLAGS) \
 			-D_USE_INTERNAL_SOUND_PATH_ \
@@ -41,6 +47,7 @@ libmmfsound_la_LIBADD = $(MMCOMMON_LIBS) \
 			$(MMSESSION_LIBS) \
 			$(AUDIOSESSIONMGR_LIBS) \
 			$(GLIB2_LIBS) \
+			$(GIO_LIBS) \
 			$(srcdir)/common/libmmfsoundcommon.la \
 			$(PASIMPLE_LIBS) \
 			$(PA_LIBS) \
