--- a/server/plugin/ogg/Makefile.am
+++ b/server/plugin/ogg/Makefile.am
@@ -9,11 +9,14 @@ libsoundplugintremoloogg_la_CFLAGS  = \
 				-I$(srcdir)/ \
 				-I$(srcdir)/../../include \
 				-I$(srcdir)/../../../include \
+				$(PA_CFLAGS) \
 				$(MMLOGSVR_CFLAGS) -DMMF_LOG_OWNER=0x002 -DMMF_DEBUG_PREFIX=\"MMF-SOUND\"
 
 libsoundplugintremoloogg_la_LIBADD = $(MMCOMMON_LIBS) \
 				$(MMLOGSVR_LIBS) \
 				$(TREMOLO_LIBS) \
+				$(PA_LIBS) \
+				$(srcdir)/../../../libmmfsound.la \
 				$(srcdir)/../../../common/libmmfsoundcommon.la
 
 install-exec-hook:
