--- a/server/plugin/keytone/Makefile.am
+++ b/server/plugin/keytone/Makefile.am
@@ -8,12 +8,15 @@ libsoundpluginkeytone_la_CFLAGS  = \
 				$(GIO_CFLAGS) \
 				-I$(srcdir)/../../../include \
 				-I$(srcdir)/../../include \
+				$(PA_CFLAGS) \
 				$(MMLOGSVR_CFLAGS) -DMMF_LOG_OWNER=0x002 -DMMF_DEBUG_PREFIX=\"MMF-SOUND\"
 
 libsoundpluginkeytone_la_LIBADD  = $(MMCOMMON_LIBS) \
 				$(MMLOGSVR_LIBS) \
 				$(VCONF_LIBS) \
 				$(GIO_LIBS) \
+				$(PA_LIBS) \
+				$(srcdir)/../../../libmmfsound.la \
 				$(srcdir)/../../../common/libmmfsoundcommon.la
 
 if OGG_SUPPORT
