--- a/server/plugin/wav/Makefile.am
+++ b/server/plugin/wav/Makefile.am
@@ -6,10 +6,13 @@ libsoundpluginwave_la_CFLAGS  = \
 				$(MMCOMMON_CFLAGS) \
       			       -I$(srcdir)/../../../include \
       			       -I$(srcdir)/../../include \
+				$(PA_CFLAGS) \
 				$(MMLOGSVR_CFLAGS) -DMMF_LOG_OWNER=0x002 -DMMF_DEBUG_PREFIX=\"MMF-SOUND\"
 
 libsoundpluginwave_la_LIBADD  = $(MMCOMMON_LIBS) \
 				$(MMLOGSVR_LIBS) \
+				$(PA_LIBS) \
+				$(srcdir)/../../../libmmfsound.la \
 				$(srcdir)/../../../common/libmmfsoundcommon.la 
 
 install-exec-hook:
