--- a/server/Makefile.am
+++ b/server/Makefile.am
@@ -55,6 +55,10 @@ sound_server_CFLAGS += -DPULSE_CLIENT $(PA_CFLAGS) $(PASIMPLE_CFLAGS)
 sound_server_LDADD += $(PA_LIBS) $(PASIMPLE_CFLAGS)
 endif
 
+if USE_FOCUS
+sound_server_SOURCES += mm_sound_mgr_focus.c
+endif
+
 sound_server_DEPENDENCIES = $(srcdir)/../common/libmmfsoundcommon.la
 sound_server_CFLAGS += -fPIC -pie
 installsounddir = $(prefix)/share/sounds/sound-server
