Replace IPC(msgq) with Dbus for communication between server and client.
Change-Id: I42c3b437c2e8bc6308b13365f11274037567d8d2
Signed-off-by: Jeongho Mok <jho.mok@samsung.com>

--- a/server/Makefile.am
+++ b/server/Makefile.am
@@ -3,6 +3,7 @@ SUBDIRS = plugin
 bin_PROGRAMS = sound_server
 sound_server_SOURCES = mm_sound_mgr_codec.c \
 						mm_sound_mgr_ipc.c \
+						mm_sound_mgr_ipc_dbus.c \
 						mm_sound_mgr_pulse.c \
 						mm_sound_mgr_asm.c \
 						mm_sound_mgr_device.c \
