--- a/Makefile.am
+++ b/Makefile.am
@@ -15,6 +15,7 @@ includelibmmfsound_HEADERS = include/mm_sound.h \
 
 libmmfsound_la_SOURCES = mm_sound.c \
 			mm_sound_client.c \
+			mm_sound_client_dbus.c \
 			mm_sound_device.c \
 			mm_sound_pcm.c \
 			mm_sound_pa_client.c \
@@ -30,6 +31,7 @@ libmmfsound_la_CFLAGS = -I$(srcdir)/include \
 			$(VCONF_CFLAGS) \
 			-I$(srcdir)/servertype/include \
 			$(GLIB2_CFLAGS) \
+			$(GIO_CFLAGS) \
 			$(MMSESSION_CFLAGS) \
 			$(AUDIOSESSIONMGR_CFLAGS) \
 			-D_USE_INTERNAL_SOUND_PATH_ \
@@ -45,6 +47,7 @@ libmmfsound_la_LIBADD = $(MMCOMMON_LIBS) \
 			$(MMSESSION_LIBS) \
 			$(AUDIOSESSIONMGR_LIBS) \
 			$(GLIB2_LIBS) \
+			$(GIO_LIBS) \
 			$(srcdir)/common/libmmfsoundcommon.la \
 			$(PASIMPLE_LIBS) \
 			$(PA_LIBS) \
