Rebase code with tizen 2.3 with following additional changes
1. enable _TIZEN_PUBLIC_
2. disable SUPPORT_BT_SCO
3. fix build error (%.pc -> .pc, -lrt, PULSE_CFLAGS/LIBS -> PA_CFLAGS/LIBS, PASIMPLE_CFLAGS/LIBS)
4. fix build error (add m4_pattern_allow([AM_PROG_AR]), AM_PROG_AR, AM_PROG_CC_C_O in configure.ac)
5. disable code related to VCONFKEY_RECORDER_STATE, VCONFKEY_SETAPPL_ACCESSORY_DOCK_SOUND
6. [vonf-buxton] no smack labels for vconf key initialization
7. [vonf-buxton] change sound_server exec smack label frmo "sound_server" to "User"

Change-Id: I610a527852e9871bfe5cd74bc36e4b2783adfbc4

--- a/pkgconfig/Makefile.am
+++ b/pkgconfig/Makefile.am
@@ -1,8 +1,8 @@
-pcfiles = mm-sound.pc mm-keysound.pc
+pcfiles = mm-sound.pc mm-keysound.pc mm-bootsound.pc
 
 all-local: $(pcfiles)
 
-%.pc: %.pc
+.pc: .pc
 	cp $< $@
 
 pkgconfigdir= $(libdir)/pkgconfig
@@ -10,7 +10,7 @@ pkgconfig_DATA= $(pcfiles)
 
 CLEANFILES= $(pcfiles)
 
-pcinfiles= mm-sound.pc.in mm-keysound.pc.in
+pcinfiles= mm-sound.pc.in mm-keysound.pc.in mm-bootsound.pc.in
 
 EXTRA_DIST= $(pcinfiles)
 
