--- a/server/Makefile.am
+++ b/server/Makefile.am
@@ -6,50 +6,56 @@ sound_server_SOURCES = mm_sound_mgr_codec.c \
 						mm_sound_mgr_pulse.c \
 						mm_sound_mgr_asm.c \
 						mm_sound_mgr_device.c \
-						mm_sound_mgr_headset.c \
-						mm_sound_mgr_dock.c \
-						mm_sound_mgr_hdmi.c \
-						mm_sound_mgr_wfd.c \
+						mm_sound_mgr_device_headset.c \
+						mm_sound_mgr_device_dock.c \
+						mm_sound_mgr_device_hdmi.c \
+						mm_sound_mgr_device_wfd.c \
 						mm_sound_mgr_session.c \
 						mm_sound_mgr_run.c \
 						mm_sound_plugin.c \
 						mm_sound_server.c \
-						mm_sound_thread_pool.c \
-						mm_sound_hal.c
+						mm_sound_thread_pool.c
 
 sound_server_CFLAGS = -I$(srcdir)/../include \
 					  -I$(srcdir)/include \
 					  $(MMCOMMON_CFLAGS) \
 					  $(MMLOGSVR_CFLAGS) \
-					  -DMMF_LOG_OWNER=0x020 \
+					  -DMMF_LOG_OWNER=0x002 \
 					  -DMMF_DEBUG_PREFIX=\"MMF-SOUND\" \
 					  -D__DEBUG_MODE__ -DUSE_VCONF -D__USE_LOGMANAGER__ \
-					  -rdynamic \
 					  $(MMSESSION_CFLAGS) \
-					  $(AVSYSTEM_CFLAGS) \
 			  		  $(AUDIOSESSIONMGR_CFLAGS) \
 			  		  $(VCONF_CFLAGS) \
 			  		  $(GLIB2_CFLAGS) \
+			  		  $(GIO_CFLAGS) \
 			  		  $(HEYNOTI_CFLAGS)
 
 sound_server_LDADD = $(MMLOGSVR_LIBS) \
-		     -ldl \
+		     -ldl -lrt \
 		     $(MMCOMMON_LIBS) \
 		     $(MMSESSION_LIBS) \
-		     $(AVSYSTEM_LIBS) \
 		     $(AUDIOSESSIONMGR_LIBS) \
 		     $(GLIB2_LIBS) \
+		     $(GIO_LIBS) \
 		     $(VCONF_LIBS) \
 		     $(HEYNOTI_LIBS) \
 		     $(srcdir)/../libmmfsound.la \
-		     $(srcdir)/../common/libmmfsoundcommon.la 
+		     $(srcdir)/../common/libmmfsoundcommon.la
+
+sound_server_CFLAGS += $(BLUETOOTH_API_CFLAGS)
+sound_server_LDADD += $(BLUETOOTH_API_LIBS)
+
+if SUPPORT_BT_SCO
+sound_server_CFLAGS += $(BLUETOOTH_CFLAGS)
+sound_server_LDADD += $(BLUETOOTH_LIBS)
+endif
 
 if USE_PULSE
-sound_server_CFLAGS += -DPULSE_CLIENT $(PULSE_CFLAGS)
-sound_server_LDADD += $(PULSE_LIBS)
+sound_server_CFLAGS += -DPULSE_CLIENT $(PA_CFLAGS) $(PASIMPLE_CFLAGS)
+sound_server_LDADD += $(PA_LIBS) $(PASIMPLE_CFLAGS)
 endif
 
 sound_server_DEPENDENCIES = $(srcdir)/../common/libmmfsoundcommon.la
-
-installdocksounddir = $(prefix)/share/sounds/sound-server
-installdocksound_DATA = sounds/dock.wav sounds/undock.wav
+sound_server_CFLAGS += -fPIC -pie
+installsounddir = $(prefix)/share/sounds/sound-server
+installsound_DATA = sounds/dock.ogg sounds/undock.ogg sounds/Tizen_HW_Touch.ogg
