--- a/server/plugin/keytone/Makefile.am
+++ b/server/plugin/keytone/Makefile.am
@@ -1,21 +1,25 @@
 lib_LTLIBRARIES = libsoundpluginkeytone.la
 
-#libsoundpluginkeytone_la_SOURCES = mm_sound_plugin_run_keytone.c
-#libsoundpluginkeytone_la_SOURCES = mm_sound_plugin_run_keytone_alsa.c
-libsoundpluginkeytone_la_SOURCES = mm_sound_plugin_run_key_tone.c 
+libsoundpluginkeytone_la_SOURCES = mm_sound_plugin_run_key_tone.c
 
 libsoundpluginkeytone_la_CFLAGS  = \
 				$(MMCOMMON_CFLAGS) \
+				$(VCONF_CFLAGS) \
+				$(GIO_CFLAGS) \
 				-I$(srcdir)/../../../include \
 				-I$(srcdir)/../../include \
-				$(MMLOGSVR_CFLAGS) -DMMF_LOG_OWNER=0x020 -DMMF_DEBUG_PREFIX=\"MMF-SOUND\"
+				$(MMLOGSVR_CFLAGS) -DMMF_LOG_OWNER=0x002 -DMMF_DEBUG_PREFIX=\"MMF-SOUND\"
 
 libsoundpluginkeytone_la_LIBADD  = $(MMCOMMON_LIBS) \
 				$(MMLOGSVR_LIBS) \
-				$(srcdir)/../../../common/libmmfsoundcommon.la 
+				$(VCONF_LIBS) \
+				$(GIO_LIBS) \
+				$(srcdir)/../../../common/libmmfsoundcommon.la
 
-libsoundpluginkeytone_la_CFLAGS += $(AVSYSTEM_CFLAGS)
-libsoundpluginkeytone_la_LIBADD += $(AVSYSTEM_LIBS)
+if OGG_SUPPORT
+libsoundpluginkeytone_la_CFLAGS += $(TREMOLO_CFLAGS)
+libsoundpluginkeytone_la_LIBADD += $(TREMOLO_LIBS)
+endif
 
 install-exec-hook:
 	mkdir -p $(DESTDIR)$(libdir)/soundplugins
