--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -4,7 +4,6 @@ mm_sound_testsuite_SOURCES = mm_sound_testsuite_simple.c
 
 mm_sound_testsuite_CFLAGS = $(MMCOMMON_CFLAGS) \
 				-I$(srcdir)/../include \
-				$(AVSYSTEM_CFLAGS) \
 				$(ALSA_CFLAGS) \
 				$(VCONF_CFLAGS) \
 				$(AUDIOSESSIONMGR_CFLAGS) \
@@ -12,10 +11,9 @@ mm_sound_testsuite_CFLAGS = $(MMCOMMON_CFLAGS) \
 
 mm_sound_testsuite_DEPENDENCIES = $(srcdir)/../.libs/libmmfsound.la \
 								$(srcdir)/../.libs/libmmfkeysound.la 
-
+mm_sound_testsuite_CFLAGS += -fPIC -pie
 mm_sound_testsuite_LDADD = $(MMCOMMON_LIBS) \
 				$(MMSESSION_LIBS) \
-				$(AVSYSTEM_LIBS) \
 				$(VCONF_LIBS) \
 				$(AUDIOSESSIONMGR_LIBS) \
 				$(srcdir)/../.libs/libmmfsound.la \
