--- a/packaging/sound-server.service
+++ b/packaging/sound-server.service
@@ -3,10 +3,9 @@ Description=Start the sound profile service
 
 [Service]
 ExecStart=/usr/bin/sound_server -S
-Nice=5
-OOMScoreAdjust=-100
 Restart=always
-RestartSec=2
+RestartSec=0
+MemoryLimit=50M
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=tizen-system.target
