Rebase code with tizen 2.3 with following additional changes
1. enable _TIZEN_PUBLIC_
2. disable SUPPORT_BT_SCO
3. fix build error (%.pc -> .pc, -lrt, PULSE_CFLAGS/LIBS -> PA_CFLAGS/LIBS, PASIMPLE_CFLAGS/LIBS)
4. fix build error (add m4_pattern_allow([AM_PROG_AR]), AM_PROG_AR, AM_PROG_CC_C_O in configure.ac)
5. disable code related to VCONFKEY_RECORDER_STATE, VCONFKEY_SETAPPL_ACCESSORY_DOCK_SOUND
6. [vconf-buxton] no smack labels for vconf key initialization (memory), set smack label as User for file backend vconfs

Change-Id: I610a527852e9871bfe5cd74bc36e4b2783adfbc4

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,39 +9,44 @@ lib_LTLIBRARIES = libmmfsound.la
 includelibmmfsounddir = $(includedir)/mmf
 includelibmmfsound_HEADERS = include/mm_sound.h \
 							include/mm_sound_private.h \
-							server/include/mm_sound_plugin.h \
-							server/include/mm_sound_plugin_hal.h
+							include/mm_sound_pa_client.h \
+							include/mm_sound_pcm_async.h
 
 libmmfsound_la_SOURCES = mm_sound.c \
-			mm_sound_client.c 
+			mm_sound_client.c \
+			mm_sound_device.c \
+			mm_sound_pcm.c \
+			mm_sound_pa_client.c \
+			mm_sound_pcm_async.c
 
 libmmfsound_la_DEPENDENCIES = common/libmmfsoundcommon.la
-								
 
 libmmfsound_la_CFLAGS = -I$(srcdir)/include \
 			$(MMCOMMON_CFLAGS) \
 			$(VCONF_CFLAGS) \
 			-I$(srcdir)/servertype/include \
-			$(AVSYSTEM_CFLAGS) \
 			$(GLIB2_CFLAGS) \
 			$(MMSESSION_CFLAGS) \
 			$(AUDIOSESSIONMGR_CFLAGS) \
 			-D_USE_INTERNAL_SOUND_PATH_ \
+			$(PASIMPLE_CFLAGS) \
+			$(PA_CFLAGS) \
 			$(VCONF_CFLAGS)
 
 if USE_PULSE
 libmmfsound_la_CFLAGS += -DPULSE_CLIENT
 endif
-			
 
 libmmfsound_la_LIBADD = $(MMCOMMON_LIBS) \
-			$(AVSYSTEM_LIBS) \
 			$(MMSESSION_LIBS) \
 			$(AUDIOSESSIONMGR_LIBS) \
 			$(GLIB2_LIBS) \
 			$(srcdir)/common/libmmfsoundcommon.la \
+			$(PASIMPLE_LIBS) \
+			$(PA_LIBS) \
 			$(VCONF_LIBS)
-			
+
+
 libmmfsound_la_LDFLAGS = -version-info 1:0:1
 
 #For logmanager
@@ -62,8 +67,23 @@ libmmfkeysound_la_SOURCES = mm_sound_keysound.c
 
 libmmfkeysound_la_CFLAGS = -I$(srcdir)/include \
 			$(MMCOMMON_CFLAGS) \
+			$(VCONF_CFLAGS) \
 			-D_USE_INTERNAL_SOUND_PATH_
 
-libmmfkeysound_la_LIBADD = $(MMCOMMON_LIBS)
+libmmfkeysound_la_LIBADD = $(MMCOMMON_LIBS) $(VCONF_LIBS)
 libmmfkeysound_la_CFLAGS += $(MMLOGSVR_CFLAGS) -DMMF_LOG_OWNER=0x020 -DMMF_DEBUG_PREFIX=\"MMF-SOUND\"
 libmmfkeysound_la_LIBADD += $(MMLOGSVR_LIBS)
+
+lib_LTLIBRARIES += libmmfbootsound.la
+
+includelibmmfbootsounddir = $(includedir)/mmf
+
+libmmfbootsound_la_SOURCES = mm_sound_bootsound.c
+libmmfbootsound_la_CFLAGS = -I$(srcdir)/include \
+			$(MMCOMMON_CFLAGS) \
+			$(VCONF_CFLAGS) \
+			-D_USE_INTERNAL_SOUND_PATH_
+
+libmmfbootsound_la_LIBADD = $(MMCOMMON_LIBS) $(VCONF_LIBS)
+libmmfbootsound_la_CFLAGS += $(MMLOGSVR_CFLAGS) -DMMF_LOG_OWNER=0x020 -DMMF_DEBUG_PREFIX=\"MMF-SOUND\"
+libmmfbootsound_la_LIBADD += $(MMLOGSVR_LIBS)
