Launch a new daemon for Audio Stream Focus
[Version] Release 0.9.240
[Profile] Common
[Issue Type] Refactoring

Separage Focus Server from Sound Server

Change-Id: I9d1f57eb3ce0e0451c437e787fc8d7d36cbf5388

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,8 @@ SUBDIRS = common \
 		pkgconfig \
 		. \
 		server \
-		testsuite
+		testsuite \
+		focus_server
 
 lib_LTLIBRARIES = libmmfsound.la
 
