Launch a new daemon for Audio Stream Focus
[Version] Release 0.9.240
[Profile] Common
[Issue Type] Refactoring

Separage Focus Server from Sound Server

Change-Id: I9d1f57eb3ce0e0451c437e787fc8d7d36cbf5388

--- a/packaging/sound-server.conf
+++ b/packaging/sound-server.conf
@@ -23,4 +23,24 @@
     <allow send_destination="org.tizen.SoundServer"/>
     <allow receive_sender="org.tizen.SoundServer"/>
   </policy>
+  <policy user="default">
+    <allow own_prefix="org.tizen.FocusServer"/>
+    <allow send_destination="org.tizen.FocusServer"/>
+    <allow receive_sender="org.tizen.FocusServer"/>
+  </policy>
+  <policy user="system">
+    <allow own="org.tizen.FocusServer"/>
+    <allow send_destination="org.tizen.FocusServer"/>
+    <allow receive_sender="org.tizen.FocusServer"/>
+  </policy>
+  <policy user="root">
+    <allow own_prefix="org.tizen.FocusServer"/>
+    <allow send_destination="org.tizen.FocusServer"/>
+    <allow receive_sender="org.tizen.FocusServer"/>
+  </policy>
+  <policy context="default">
+    <allow own_prefix="org.tizen.FocusServer"/>
+    <allow send_destination="org.tizen.FocusServer"/>
+    <allow receive_sender="org.tizen.FocusServer"/>
+  </policy>
 </busconfig>
