Add mm_sound_device.h to library
[Version] Release 0.9.265
[Profile] Common
[Issue Type] Script

Change-Id: I908ee2ccb2eb1662090aaf70274bde9a6dc04be1
Signed-off-by: inhyeok <i_bc.kim@samsung.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,7 +12,8 @@ includelibmmfsound_HEADERS = include/mm_sound.h \
 							include/mm_sound_private.h \
 							include/mm_sound_pa_client.h \
 							include/mm_sound_pcm_async.h \
-							include/mm_sound_focus.h
+							include/mm_sound_focus.h \
+							include/mm_sound_device.h
 
 libmmfsound_la_SOURCES = mm_sound.c \
 			mm_sound_client.c \
