Change the default username for a policy
To state that a policy should apply to all/any user is to set the
user attribute of a policy tag to "*" rather than "default".

Change-Id: I7ca7e7b334e6756a66a69ebbc8c07f1fbb84d31b

--- a/packaging/focus-server.conf
+++ b/packaging/focus-server.conf
@@ -3,7 +3,7 @@
  "http://www.freedesktop.org/standards/dbus/1.0/busconfig.dtd">
 
 <busconfig>
-  <policy user="default">
+  <policy user="*">
     <allow own_prefix="org.tizen.FocusServer"/>
     <allow send_destination="org.tizen.FocusServer"/>
     <allow receive_sender="org.tizen.FocusServer"/>
