Dbus logic/layer/interface enhancements
- Remove msgq related / unused codes
- Add mm_sound_intf.h for audio framework internal interface
- Divide dbus related code into mm_sound_dbus.c,
  and provide general interface
- Change file name from 'mm_sound_client_dbus.c' to 'mm_sound_proxy.c'
  complying with its role
- Change 'emergent exit' to signal of client
- Remove duplicated code
- Add device_flag check logic in device-callback
- Deallocate internal userdata when unsubscribe

Change-Id: I6cb8eaa0089a288ba4d1068dcfb55ab87c3dfb8a

--- a/Makefile.am
+++ b/Makefile.am
@@ -16,7 +16,7 @@ includelibmmfsound_HEADERS = include/mm_sound.h \
 
 libmmfsound_la_SOURCES = mm_sound.c \
 			mm_sound_client.c \
-			mm_sound_client_dbus.c \
+			mm_sound_proxy.c \
 			mm_sound_device.c \
 			mm_sound_pa_client.c
 if USE_FOCUS
