[DO NOT MERGE] Modified service files for TV profile
Change-Id: I79676946cbd9bf627cf8ea8f76e2d9ad6da66c9a
Signed-off-by: Seonmi Jin <seonmi.jin@samsung.com>

--- a/packaging/sound-server.service
+++ b/packaging/sound-server.service
@@ -1,11 +1,10 @@
 [Unit]
 Description=Start the sound profile service
+DefaultDependencies=false
+After=factory-init.service pulseaudio.service
 
 [Service]
 ExecStart=/usr/bin/sound_server -S
 Restart=always
 RestartSec=0
 MemoryLimit=50M
-
-[Install]
-WantedBy=tizen-system.target
