[WIP] Change UID/GID of services
Change-Id: I94f66b0c6f870c9749614562f80472dbd5f50980

--- a/packaging/sound-server.service
+++ b/packaging/sound-server.service
@@ -6,6 +6,8 @@ ExecStart=/usr/bin/sound_server -S
 Restart=always
 RestartSec=0
 MemoryLimit=50M
+User=multimedia_fw
+Group=multimedia_fw
 
 [Install]
 WantedBy=tizen-system.target
