--- a/packaging/focus-server.service
+++ b/packaging/focus-server.service
@@ -6,6 +6,8 @@ ExecStart=/usr/bin/focus_server -S
 Restart=always
 RestartSec=0
 MemoryLimit=50M
+User=multimedia_fw
+Group=multimedia_fw
 
 [Install]
 WantedBy=tizen-system.target
