[TV] Add configuration --enable-prelink
if !USE_PRELINK
CFLAGS += -fPIC -pie

[Version] Release 0.10.32
[Profile] TV
[Issue Type] Code merge

Change-Id: I144fb51a99628943f6614b8fc2c0f89f95fbcb1b
Signed-off-by: Seonmi Jin <seonmi.jin@samsung.com>

--- a/focus_server/Makefile.am
+++ b/focus_server/Makefile.am
@@ -30,4 +30,6 @@ focus_server_LDADD += $(SECURITY_LIBS)
 endif
 
 focus_server_DEPENDENCIES = $(srcdir)/../common/libmmfsoundcommon.la
+if !USE_PRELINK
 focus_server_CFLAGS += -fPIC -pie
+endif
