--- a/project.config
+++ b/project.config
@@ -3,8 +3,5 @@
 [access]
 	inheritFrom = scm/acls/domain_multimedia/audio_fw
 [project]
-	description = "Domain: Multimedia;"\n\
-"Maintainers: Jonghyuk Choi,Vivian Zhang;"\n\
-"Integrators: Byungwook Jang;"\n\
-"Licenses: Apache-2.0;"
+	description = "Domain: Multimedia / Audio FW;"
 [receive]
