Remove keytone plugin
1. request from mm_sound_keysound() is handled by module-sound-player currently,
2. handling hw keytone event will be done at moudle-hw-keysound

Change-Id: Id70e9065b14defd473183bc424a6a1fce70d8bcd

--- a/server/plugin/Makefile.am
+++ b/server/plugin/Makefile.am
@@ -1,6 +1,6 @@
 if OGG_SUPPORT
-SUBDIRS = wav keytone tone ogg
+SUBDIRS = wav tone ogg
 else
-SUBDIRS = wav keytone tone
+SUBDIRS = wav tone
 endif
 
