Set the SMACK security label to run given executable file in systemd services
Change-Id: Ia97b28813681a13f390701e489b6888037e75aaa
Signed-off-by: jooseong lee <jooseong.lee@samsung.com>

--- a/packaging/sound-server.service
+++ b/packaging/sound-server.service
@@ -8,6 +8,7 @@ RestartSec=0
 MemoryLimit=50M
 User=multimedia_fw
 Group=multimedia_fw
+SmackProcessLabel=System
 
 [Install]
 WantedBy=tizen-system.target
