Test for ondemand sound-server
1. Split focus_server code from sound_server (go back to original)
2. Modifiy service files (sound-server systemd service will not be exists)
3. Add dbus activation service file (org.tizen.SoundServer.service) for sound-server
4. Shutdown sound-server if no use (check every 10 seconds....)
5. Move boot semaphore and  pa_ready / sound_server_ready handling code to focus_server
6. Modifications for coding rules

Change-Id: I946ddf504541a4839056fc6a412ae9d5eb2b9a34

--- a/packaging/focus-server.service
+++ b/packaging/focus-server.service
@@ -1,14 +1,13 @@
 [Unit]
-Description=Start the sound profile service
+Description=Start the focus profile service
 
 [Service]
-ExecStart=/usr/bin/sound_server -S
+ExecStart=/usr/bin/focus_server -S
 Restart=always
 RestartSec=0
 MemoryLimit=50M
 User=multimedia_fw
 Group=multimedia_fw
-SmackProcessLabel=System
 
 [Install]
 WantedBy=tizen-system.target
