--- a/configure.ac
+++ b/configure.ac
@@ -161,6 +161,7 @@ server/plugin/wav/Makefile
 server/plugin/ogg/Makefile
 server/plugin/keytone/Makefile
 server/plugin/tone/Makefile
+focus_server/Makefile
 pkgconfig/Makefile
 pkgconfig/mm-sound.pc
 pkgconfig/mm-keysound.pc
