Test for ondemand sound-server
1. split focus_server / sound_server
2. modifiy service files
3. shutdown sound-server if no use (check every 10 seconds....)

Change-Id: I946ddf504541a4839056fc6a412ae9d5eb2b9a34

--- a/server/Makefile.am
+++ b/server/Makefile.am
@@ -1,18 +1,15 @@
 SUBDIRS = plugin
 
-bin_PROGRAMS = focus_server
-focus_server_SOURCES = mm_sound_mgr_codec.c \
+bin_PROGRAMS = sound_server
+sound_server_SOURCES = mm_sound_mgr_codec.c \
 						mm_sound_mgr_ipc.c \
 						mm_sound_mgr_ipc_dbus.c \
 						mm_sound_mgr_run.c \
-						mm_sound_mgr_focus.c \
-						mm_sound_mgr_focus_dbus.c \
-						mm_sound_mgr_focus_ipc.c \
 						mm_sound_plugin.c \
 						mm_sound_server.c \
 						mm_sound_thread_pool.c
 
-focus_server_CFLAGS = -I$(srcdir)/../include \
+sound_server_CFLAGS = -I$(srcdir)/../include \
 					  -I$(srcdir)/include \
 					  $(MMCOMMON_CFLAGS) \
 					  $(MMLOGSVR_CFLAGS) \
@@ -25,7 +22,7 @@ focus_server_CFLAGS = -I$(srcdir)/../include \
 			  		  $(GLIB2_CFLAGS) \
 			  		  $(GIO_CFLAGS)
 
-focus_server_LDADD = $(MMLOGSVR_LIBS) \
+sound_server_LDADD = $(MMLOGSVR_LIBS) \
 		     -ldl -lrt \
 		     $(MMCOMMON_LIBS) \
 		     $(MMSESSION_LIBS) \
@@ -37,18 +34,18 @@ focus_server_LDADD = $(MMLOGSVR_LIBS) \
 		     $(srcdir)/../common/libmmfsoundcommon.la
 
 if USE_PULSE
-focus_server_CFLAGS += -DPULSE_CLIENT $(PA_CFLAGS) $(PASIMPLE_CFLAGS)
-focus_server_LDADD += $(PA_LIBS) $(PASIMPLE_CFLAGS)
+sound_server_CFLAGS += -DPULSE_CLIENT $(PA_CFLAGS) $(PASIMPLE_CFLAGS)
+sound_server_LDADD += $(PA_LIBS) $(PASIMPLE_CFLAGS)
 endif
 
 if USE_SECURITY
-focus_server_CFLAGS += $(SECURITY_CFLAGS) -DUSE_SECURITY
-focus_server_LDADD += $(SECURITY_LIBS)
+sound_server_CFLAGS += $(SECURITY_CFLAGS) -DUSE_SECURITY
+sound_server_LDADD += $(SECURITY_LIBS)
 endif
 
-focus_server_DEPENDENCIES = $(srcdir)/../common/libmmfsoundcommon.la
+sound_server_DEPENDENCIES = $(srcdir)/../common/libmmfsoundcommon.la
 if !USE_PRELINK
-focus_server_CFLAGS += -fPIC -pie
+sound_server_CFLAGS += -fPIC -pie
 endif
 installsounddir = $(prefix)/share/sounds/sound-server
 installsound_DATA = sounds/Tizen_HW_Touch.ogg
