--- a/server/plugin/wav/Makefile.am
+++ b/server/plugin/wav/Makefile.am
@@ -1,19 +1,21 @@
 lib_LTLIBRARIES = libsoundpluginwave.la
 
-libsoundpluginwave_la_SOURCES = mm_sound_plugin_codec_wave.c 
+libsoundpluginwave_la_SOURCES = mm_sound_plugin_codec_wave.c
 
 libsoundpluginwave_la_CFLAGS  = \
 				$(MMCOMMON_CFLAGS) \
-      			       -I$(srcdir)/../../../include \
-      			       -I$(srcdir)/../../include \
+				-I$(srcdir)/../../../include \
+				-I$(srcdir)/../../include \
 				$(PA_CFLAGS) \
+				$(SNDFILE_CFLAGS) \
 				$(MMLOGSVR_CFLAGS) -DMMF_LOG_OWNER=0x002 -DMMF_DEBUG_PREFIX=\"MMF-SOUND\"
 
 libsoundpluginwave_la_LIBADD  = $(MMCOMMON_LIBS) \
 				$(MMLOGSVR_LIBS) \
 				$(PA_LIBS) \
+				$(SNDFILE_LIBS) \
 				$(srcdir)/../../../libmmfsound.la \
-				$(srcdir)/../../../common/libmmfsoundcommon.la 
+				$(srcdir)/../../../common/libmmfsoundcommon.la
 
 install-exec-hook:
 	mkdir -p $(DESTDIR)$(libdir)/soundplugins
